Update domain and branding to rapidai.website
Replace all references to aiwebsitebuilder.tech with rapidai.website across multiple files, including:
- Environment configuration
- Middleware
- Component URLs
- Documentation
- Email templates
- Sitemap and robots.txt

This comprehensive update ensures consistent branding and domain usage throughout the application.

--- a/emails/waitlist-launch-announcement.mdx
+++ b/emails/waitlist-launch-announcement.mdx
@@ -52,7 +52,7 @@ Simply reply to this email with your feedback, or use our feedback form [here].
 
 ## Ready to Start?
 
-1. Visit [https://aiwebsitebuilder.tech/signup]
+1. Visit [https://rapidai.website/signup]
 2. Create your account
 3. Use code **EARLYSUPPORTER25** at checkout
 4. Start building your dream website!
